refactor and add kafka consumer
